2003-02-16  Heikki Junes <hjunes@cc.hut.fi>

	* lilypond.words:
	* Documentation/user/music-glossary.tely: add ambitus.

2003-02-15  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* scm/chords-ignatzek.scm (ignatzek-chord-names): robustness fix.

	* lily/include/*.hh: string() -> to_string()

	* scm/chords-ignatzek.scm: new file.

	* ly/chord-modifiers-init.ly (ignatzekExceptionMusic): define
	standard chord name exceptions.

	* scm/translator-property-description.scm (chordNameSeparator):
	add property.
	(majorSevenSymbol): add property

	* lily/translator-scheme.cc (ly:context-properties): new function
	(ly:context-parent): new function.
	(print_smob): print context name.

	* lily/music.cc (ly:get-music-length): new function
	(print_smob): don't print properties.

	* lily/duration.cc (duration<?): new function

	* input/regression/chords-funky-ignatzek.ly: new file.

	* scm/double-plus-new-chord-name.scm (ignatzek-chord-names):
	jazz chords.

	* lily/pitch.cc (ly:pitch-diff): new function.

	* input/regression/chords-ignatzek.ly: new file.

2003-02-14  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* scm/double-plus-new-chord-name.scm (ignatzek-chord-names): classify
	pitches for jazz chords.

2003-02-13  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/pitch.cc (LY_DEFINE): add ly:pitch-steps

2003-02-05  Heikki Junes  <hjunes@cc.hut.fi>

	* lilypond.words: add 1

2003-02-04  Heikki Junes  <hjunes@cc.hut.fi>

	* Documentation/topdocs/AUTHORS.texi: refine.

2003-01-25  Heikki Junes  <hjunes@cc.hut.fi>

	* lilypond-font-lock.el: lyrics-mode update for multiple stanza.
	
	* lilypond.words: add one.

2003-01-23  Heikki Junes  <hjunes@cc.hut.fi>

	* lilypond-font-lock.el: Fontify post-notated slurs [-^_][()].
	Fontify bass note in chords, e.g., e in c1/e.
	
2003-01-19  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/user/music-glossary.tely: Dutch updates and
	additions (Arent Storm).

2003-01-19  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* input/regression/ambitus.ly:  move file.	
